--- a/src/style.css
+++ b/src/style.css
@@ -108,6 +108,53 @@ button:focus-visible {
   box-shadow: 0 0 15px rgba(32, 79, 232, 0.3);
 }
 
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  padding: 58px 0 0; /* Height of navbar */
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+  width: 300px;
+  z-index: 600;
+  transition: left 0.3s ease; /* Animasi saat toggler diklik */
+  left: -300px; /* Sidebar secara default tersembunyi */
+}
+
+.sidebar.show {
+  left: 0; /* Tampilkan sidebar saat kelas 'show' ditambahkan */
+}
+
+@media (max-width: 991.98px) {
+  .sidebar {
+    width: 100%;
+  }
+}
+.sidebar .active {
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+.list-group-item {
+  margin-bottom: 40px;
+}
+
+.navbar{
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  height: 70px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
